# libcloudphxx

./: CMakeLists.txt
docs/: API.md  Installation_guide.md  README.md  USER_OPTIONS.md  installation_guide.md
include/libcloudph++/blk_1m/: formulae.hpp
include/libcloudph++/common/: ice_deposition.hpp  kappa_koehler.hpp
models/box/: CMakeLists.txt  box.cpp  libcloud_hacks.hpp  output.hpp  plot_output.ipynb  spectral.hpp
models/kinematic_2D/cases/: icmw8_case1.hpp
models/kinematic_2D/src/: kin_cloud_2d_lgrngn.hpp  opts_lgrngn.hpp
models/parcel/tests/Grabowski_and_Pawlowska_2023/: plot_output.ipynb
models/parcel_model/: CMakeLists.txt  libcloud_hacks.hpp  output.hpp  parcel.cpp  plot_output.ipynb  settings.hpp
src/: particles_diag.ipp  particles_multi_gpu_diag.ipp  particles_step.ipp
src/impl/: particles_impl.ipp  particles_impl_cond.ipp
src/impl/condensation/common/: particles_impl_cond_common.ipp
src/impl/condensation/perparticle/: perparticle_nomixing_adaptive_sstp_cond.ipp
src/impl/diagnose_SD_attributes/: particles_impl_moms.ipp  particles_impl_update_incloud_time.ipp
src/impl/housekeeping/: particles_impl_hskpng_rc2.ipp
src/impl/initialization/: particles_impl_init_T_freeze.ipp  particles_impl_init_wet.ipp  particles_impl_reserve_hskpng_npart.ipp
